--- a/untitled0.ipynb
+++ b/untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjCuvirutMHRivwg+tHpsc",
+      "authorship_tag": "ABX9TyPqF1hHZ9+39uerwaWCoZ3A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,12 +66,66 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#strings indexing\n",
+        "str=\"Gradstellar\"\n",
+        "print(str[0:-1])\n",
+        "print(str[-1])\n",
+        "#slicing\n",
+        "print(str[0:7:2])\n",
+        "#reverse\n",
+        "print(str[::-1])\n",
+        "#string methods\n",
+        "my_str=\"iam a topper\"\n",
+        "print(my_str.upper())\n",
+        "print(my_str.lower())\n",
+        "dir(str)\n",
+        "print(my_str.swapcase())\n",
+        "print(my_str.lstrip())\n",
+        "#string operations\n",
+        "str1=\"hello\"\n",
+        "str2=\"world\"\n",
+        "print(str1+str2)\n",
+        "print(str1*2)\n",
+        "#string formats\n",
+        "name=\"mudassir\"\n",
+        "language=\"python\"\n",
+        "year=2023\n",
+        "print(name,\"is teaching\",language,\"programming in\",year)\n",
+        "#place holder\n",
+        "print(\"%s is teaching %s  in %d\"%(name,language,year))\n",
+        "#raw string\n",
+        "print(f\"{name} is teaching {language} programing in{year}\")\n"
+      ],
       "metadata": {
-        "id": "YsfbtYegXD0k"
+        "id": "YsfbtYegXD0k",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "53c6aa6a-d662-459d-b9ab-003bbb6c7954"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Gradstella\n",
+            "r\n",
+            "Gase\n",
+            "ralletsdarG\n",
+            "IAM A TOPPER\n",
+            "iam a topper\n",
+            "IAM A TOPPER\n",
+            "iam a topper\n",
+            "helloworld\n",
+            "hellohello\n",
+            "mudassir is teaching python programming in 2023\n",
+            "mudassir is teaching python  in 2023\n",
+            "mudassir is teaching python programing in2023\n"
+          ]
+        }
+      ]
     }
   ]
 }
