--- a/untitled0.ipynb
+++ b/untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPqF1hHZ9+39uerwaWCoZ3A",
+      "authorship_tag": "ABX9TyMM4p6AaNb0fRuIeb5xZVnB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,6 +71,30 @@
         "str=\"Gradstellar\"\n",
         "print(str[0:-1])\n",
         "print(str[-1])\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "YsfbtYegXD0k",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "800b7afa-b7b2-4b89-ebe4-d196fc29ecf6"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Gradstella\n",
+            "r\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#slicing\n",
         "print(str[0:7:2])\n",
         "#reverse\n",
@@ -81,12 +105,62 @@
         "print(my_str.lower())\n",
         "dir(str)\n",
         "print(my_str.swapcase())\n",
-        "print(my_str.lstrip())\n",
+        "print(my_str.lstrip())"
+      ],
+      "metadata": {
+        "id": "y-twVyDO9EmF",
+        "outputId": "4c86d5af-b372-4800-bcf3-45858aa744e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Gase\n",
+            "ralletsdarG\n",
+            "IAM A TOPPER\n",
+            "iam a topper\n",
+            "IAM A TOPPER\n",
+            "iam a topper\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#string operations\n",
         "str1=\"hello\"\n",
         "str2=\"world\"\n",
         "print(str1+str2)\n",
-        "print(str1*2)\n",
+        "print(str1*2)"
+      ],
+      "metadata": {
+        "id": "YtWp_Vbf9Eor",
+        "outputId": "16156cb6-bb37-4bf9-cb9a-b51bb8e1aeaa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "helloworld\n",
+            "hellohello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#string formats\n",
         "name=\"mudassir\"\n",
         "language=\"python\"\n",
@@ -95,31 +169,21 @@
         "#place holder\n",
         "print(\"%s is teaching %s  in %d\"%(name,language,year))\n",
         "#raw string\n",
-        "print(f\"{name} is teaching {language} programing in{year}\")\n"
+        "print(f\"{name} is teaching {language} programing in{year}\")"
       ],
       "metadata": {
-        "id": "YsfbtYegXD0k",
+        "id": "tyxYVFy_9ErZ",
+        "outputId": "660f3b18-18dc-4686-e3f2-30667bb9770c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "53c6aa6a-d662-459d-b9ab-003bbb6c7954"
+        }
       },
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Gradstella\n",
-            "r\n",
-            "Gase\n",
-            "ralletsdarG\n",
-            "IAM A TOPPER\n",
-            "iam a topper\n",
-            "IAM A TOPPER\n",
-            "iam a topper\n",
-            "helloworld\n",
-            "hellohello\n",
             "mudassir is teaching python programming in 2023\n",
             "mudassir is teaching python  in 2023\n",
             "mudassir is teaching python programing in2023\n"
