--- a/Sets.ipynb
+++ b/Sets.ipynb
@@ -28,11 +28,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "U2hTLaB4COAY"
+        "id": "U2hTLaB4COAY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "057283ab-a005-4534-dfc3-7c659c067384"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5, 6, 7]\n",
+            "{1, 2, 3, 4, 5, 6, 7}\n"
+          ]
+        }
+      ],
       "source": [
         "#sets\n",
         "my_set={1,2,3,4,5,6,7}\n",
@@ -59,10 +72,25 @@
         "print(my_set)\n"
       ],
       "metadata": {
-        "id": "EI0HYfMYCVui"
+        "id": "EI0HYfMYCVui",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "518c68f8-8cd9-46a1-f1b9-1f6cb1f062fa"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 3, 4, 5, 6, 7, 9}\n",
+            "{1, 2, 3, 4, 5, 6, 7, 9, 11, 13}\n",
+            "{1, 2, 3, 4, 5, 6, 7, 11, 13}\n",
+            "{1, 2, 3, 4, 6, 7, 11, 13}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -85,10 +113,31 @@
         "print(b.difference(a))"
       ],
       "metadata": {
-        "id": "nsKTfocsCVxA"
+        "id": "nsKTfocsCVxA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "60dcf733-bb63-40d1-f7a4-5253daf77f9f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+            "{1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+            "{1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+            "{1, 2, 3, 4, 5, 6}\n",
+            "{1, 2, 3, 4, 5, 6}\n",
+            "{1, 2, 3, 4, 5, 6}\n",
+            "{8, 9, 7}\n",
+            "{8, 9, 7}\n",
+            "set()\n",
+            "set()\n"
+          ]
+        }
+      ]
     }
   ]
 }
