--- a/assignment_Q_7_to_17.ipynb
+++ b/assignment_Q_7_to_17.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNsNbNg7gvqlgtxPkjShWBP",
+      "authorship_tag": "ABX9TyN/nlDvqDGfJrYVCa2iuo9/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
         "id": "7mJfElLGDd7_",
         "outputId": "7aa1749d-8242-47da-e93e-706ff5e1c69c"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +86,7 @@
         "id": "NeWKXKOrHfRk",
         "outputId": "b984c491-d6dc-4f82-8b07-4ea859ef96c5"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +120,7 @@
         "id": "wx_j8cW8DjwR",
         "outputId": "b8b14ea0-822b-410c-a2c4-cac7436f4257"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +154,7 @@
         "id": "NmontG4lDjyq",
         "outputId": "7df83ff6-9253-4131-a5f9-e3c70f86faff"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,7 +191,7 @@
         "id": "4kckCrc8RgwO",
         "outputId": "4420573f-f6a6-4e3c-912f-df7060996087"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +222,7 @@
         "id": "QY5T84UbDj1C",
         "outputId": "d1719de2-0f3c-4076-af9e-24f4e8aa7955"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,7 +258,7 @@
         "id": "aYd9ByQEDj8G",
         "outputId": "09b75d07-5167-451c-f820-c785c6de089f"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,7 +294,7 @@
         "id": "5j-paRklIgR8",
         "outputId": "2157392e-5cfa-45e5-82bd-22d55154f96a"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,7 +327,7 @@
         "id": "lRFvxg0UDkF3",
         "outputId": "cbaaa207-a1df-4873-da8c-fd9d6d210aac"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -354,7 +354,7 @@
         "id": "4GncskijIzPV",
         "outputId": "aec9cf87-d499-42df-e796-abe81f9ca947"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,24 +370,25 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "#16\n",
         "p_phrase=\"was it a car or a cat i saw\"\n",
-        "print(p_phrase.upper())"
+        "print(p_phrase.upper()[::-1])\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6a3LKZEDEKrA",
-        "outputId": "22219aa2-feba-47af-aeb8-821a95110e2e"
+        "outputId": "98b05b85-da5b-4926-c76e-f6df675b82bc"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "WAS IT A CAR OR A CAT I SAW\n"
+            "WAS I TAC A RO RAC A TI SAW\n"
           ]
         }
       ]
@@ -407,7 +408,7 @@
         "id": "8x6ixzcXEK4n",
         "outputId": "37e50f89-8df5-43eb-da65-f23d3614bd1f"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
