--- a/DAY_6.ipynb
+++ b/DAY_6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOfLWN5Fjxbyt1jVN5/QOxD",
+      "authorship_tag": "ABX9TyN6+7NvX6NFBLZijqA5xVRC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -347,6 +347,34 @@
           "name": "stdout",
           "text": [
             "Index Error\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "  a=2\n",
+        "  b=\"4\"\n",
+        "  c=a/b\n",
+        "except TypeError:\n",
+        "  print(\"Type Error\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AoB8iIFyotYJ",
+        "outputId": "928ade44-3fe2-4a13-8406-11699913d2d0"
+      },
+      "execution_count": 155,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Type Error\n"
           ]
         }
       ]
